--- a/style3.css
+++ b/style3.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #white;
-    color: #333;
-    margin: 0;
-    padding: 0;
+    background-color:white;
+    color:#333;
+    margin:0;
+    padding:0;
 }
 
 
@@ -187,213 +187,40 @@ footer {
     margin-top: 10px;
     color: #6f4e37;
 }
-.toimg img:hover {
-    transform: scale(1.1);
-}
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-}
-.toimg p {
-    text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
-}
 
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-}
-.toimg p {
-    text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
-}
+.destinations-box{
+    display:flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: #ccc;
+   padding: 40px;
+   margin-left: auto;
+   margin-right: auto;
+    color: azure;
+  }
+.destinations-box-inside img{
+    width:350px;
+    height: 350px;
 
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
 }
-.toimg p {
+.destinations-box-inside {
     text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
-}
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-}
-.toimg p {
-    text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
+    margin: 20px;
 }
 
 
 
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
+.services{
+    margin: 40px;
+    background: #ccc;
+    border-radius: 15px;
+    padding: 30px;
+    max-width: 900px;
+text-align: left;
 }
-.toimg p {
+.title-box{
+    display: flex;
+    justify-content: center;
     text-align: center;
-    margin-top: 5px;
+    
 }
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
-}
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-}
-.toimg p {
-    text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37;
-}
-.toimg img:hover {
-    transform: scale(1.1);
-}
-.toimg img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-}
-.toimg p {
-    text-align: center;
-    margin-top: 5px;
-}
-.toimg a {
-    text-decoration: none;
-    color: #333;
-}
-
-.toimg a:hover {
-    color: #6f4e37;
-}
-.toimg h2 {
-    text-align: center;
-    margin-top: 20px;
-    color: #6f4e37;
-}
-.toimg p {
-    margin-top: 10px;
-    color: #6f4e37
